Added time in test.html

--- a/test.html
+++ b/test.html
@@ -6,6 +6,11 @@
     <title>Test File</title>
 </head>
 <body>
-    
+    <h1></h1>
+    <script>
+        const h1 = document.querySelector('h1')
+        const date = new Date().getFullYear()
+        h1.innerHTML = date
+    </script>
 </body>
 </html>
